# shirts

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
docs/: README.md
source/: app.py  config.py  controllers.py  fulfill_order.py  models.py  schemas.py
source/migrations/versions/: 01d3c28f5cc8_removing_shipping_details_from_order.py  20c22d11c6a8_designing_models_around_limited_items_.py  2133f248088e_adding_contact_model.py  42fd67085a8d_merging_contact_order_models.py  549503bbab1c_need_128_bytes_for_hash.py  63dde2052a25_redesign_of_models.py  7330f6d52cd5_making_hash_value_not_nullable.py  7547cf2cc127_initial_migration.py  84ce5e55b294_initial_migration.py  9932300e7303_making_store_use_names_instead_of_pk.py  e7bb934b4f15_initial_migration.py
source/scripts/: create_tables.py
source/static/: style.css
source/static/js/: try.js
source/templates/: base.html  hashes.html  home.html  index.html  order.html  order_error.html  order_form.html  order_response.html  soon.html  store.html  try.html
