[tool.poetry]
name = "shirts"
version = "0.1.0"
description = ""
authors = ["Mike Hennelly <mike@mhennelly.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
pre-commit = "^2.20.0"
marshmallow = "^3.18.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
Flask-Admin = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
